@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022 Oracle and/or its affiliates.
+ * Copyright (c) 2018, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -288,7 +288,7 @@ public final class JwtUtil {
             return ((Address) object).getJson();
         }
         if (object instanceof Collection) {
-            return JSON.createArrayBuilder((Collection) object).build();
+            return JSON.createArrayBuilder((Collection<?>) object).build();
         }
         return JSON_PROVIDER.createValue(String.valueOf(object));
     }
@@ -297,7 +297,7 @@ public final class JwtUtil {
         Matcher matcher = LOCALE_PATTERN.matcher(locale);
         Locale result;
         if (matcher.matches()) {
-            result = new Locale(matcher.group(1), matcher.group(2));
+            result = Locale.of(matcher.group(1), matcher.group(2));
         } else {
             result = Locale.forLanguageTag(locale);
         }
@@ -310,10 +310,10 @@ public final class JwtUtil {
     }
 
     static Optional<List<String>> toScopes(JsonObject json) {
-        if (json.get("scope") instanceof JsonArray) {
-            return getStrings(json, "scope");
+        if (json.get(Jwt.SCOPE) instanceof JsonArray) {
+            return getStrings(json, Jwt.SCOPE);
         } else {
-            return getString(json, "scope")
+            return getString(json, Jwt.SCOPE)
                     .map(it -> Arrays.asList(it.split(" ")));
         }
     }
